--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,14 @@
 /* WeatherStyles.css
 
 /* General styles */
- body {
-    font-family: Arial, sans-serif;
+*{
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-  }
-  
-  .container {
     text-align: center;
-  }
+}
+
   
-  h1 {
-    margin-top: 10px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  button {
+   button {
     padding: 10px 20px;
     font-size: 18px;
     margin-top: 20px;
@@ -33,12 +19,12 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+   
   button:hover {
     background-color: #0056b3;
     transform: scale(1.05);
   } 
-  
+   
 
   /* Image styles
   .season-image {
